<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		onboarding_survey___flikshop_tutorial
	 *	@date 		Thursday 13th of October 2022 05:48:06 PM
	 *	@title 		Visual Design Playground
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/onboarding_survey___flikshop_tutorial" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__onboarding_survey___flikshop_tutorial"
				android:background="@drawable/_bg__onboarding_survey___flikshop_tutorial_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="1280dp"
				android:layout_height="800dp" />

			<TextView android:id="@+id/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme"
				android:textSize="24.43sp"
				android:textColor="@color/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_color"
				android:layout_marginLeft="77dp"
				android:layout_marginTop="697dp"
				android:layout_width="713.21428585052dp"
				android:layout_height="91.214285850525dp"
				android:text="@string/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_string"
				 />

			<TextView android:id="@+id/flikshop_tutorial"
				android:textStyle="bold"
				android:textSize="37.46sp"
				android:textColor="@color/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_color"
				android:layout_marginLeft="85dp"
				android:layout_marginTop="124.57dp"
				android:layout_width="500.72847938538dp"
				android:layout_height="74.728479385376dp"
				android:text="@string/flikshop_tutorial_string"
				 />

			<TextView android:id="@+id/back"
				android:textSize="22sp"
				android:textColor="@color/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_color"
				android:layout_marginLeft="109dp"
				android:layout_marginTop="57dp"
				android:layout_width="78dp"
				android:layout_height="48dp"
				android:text="@string/back_string"
				 />


			<RelativeLayout android:id="@+id/chevron_left"
				android:layout_marginTop="61dp"
				android:layout_marginStart="77dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/vector"
					android:src="@drawable/vector"
					android:contentDescription="vector"
					 android:layout_marginStart="9dp"
					android:layout_marginTop="6dp"
					android:layout_width="6dp"
					android:layout_height="12dp" />

			</RelativeLayout>

			<TextView android:id="@+id/need_help_"
				android:textStyle="bold"
				android:textSize="18sp"
				android:textColor="@color/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_color"
				android:layout_marginLeft="938dp"
				android:layout_marginTop="227dp"
				android:layout_width="293dp"
				android:layout_height="40dp"
				android:text="@string/need_help__string"
				 />

			<TextView android:id="@+id/view_more_tutorials"
				android:textStyle="bold"
				android:textSize="18sp"
				android:textColor="@color/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_color"
				android:layout_marginLeft="938dp"
				android:layout_marginTop="408dp"
				android:layout_width="293dp"
				android:layout_height="40dp"
				android:text="@string/view_more_tutorials_string"
				 />


			<RelativeLayout android:id="@+id/akar_icons_question"
				android:layout_marginTop="172dp"
				android:layout_marginStart="938dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/group"
					android:layout_marginTop="3.58dp"
					android:layout_marginStart="3.58dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek1"
						android:src="@drawable/vector_ek1"
						android:contentDescription="vector_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="35.83dp"
						android:layout_height="35.83dp" />

					<ImageView android:id="@+id/vector_ek2"
						android:src="@drawable/vector_ek2"
						android:contentDescription="vector_ek2"
						 android:layout_marginStart="14dp"
						android:layout_marginTop="9dp"
						android:layout_width="7.17dp"
						android:layout_height="17.92dp" />

				</RelativeLayout>

			</RelativeLayout>

			<TextView android:id="@+id/you_can_access_this_at_any_time_by_clicking_the_question_mark_icon_on_the_top_right_of_your_screen"
				android:textSize="18sp"
				android:textColor="@color/here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_color"
				android:layout_marginLeft="938dp"
				android:layout_marginTop="260dp"
				android:layout_width="282dp"
				android:layout_height="148dp"
				android:text="@string/you_can_access_this_at_any_time_by_clicking_the_question_mark_icon_on_the_top_right_of_your_screen_string"
				 />

			<ImageView android:id="@+id/pexels_photo_by_elevate"
				android:src="@drawable/pexels_photo_by_elevate"
				android:contentDescription="pexels_photo_by_elevate"
				 android:layout_marginStart="77dp"
				android:layout_marginTop="202dp"
				android:layout_width="793.34dp"
				android:layout_height="459.71dp" />


			<RelativeLayout android:id="@+id/group_5237"
				android:layout_marginTop="692dp"
				android:layout_marginStart="938dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_2919"
					android:background="@drawable/rectangle_2919_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="215dp"
					android:layout_height="57dp" />

				<TextView android:id="@+id/continue"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18.62sp"
					android:textColor="@color/_bg__onboarding_survey___flikshop_tutorial_color"
					android:layout_marginLeft="39dp"
					android:layout_marginTop="14dp"
					android:layout_width="139dp"
					android:layout_height="41.307693481445dp"
					android:text="@string/continue_string"
					 />

			</RelativeLayout>

			<ImageView android:id="@+id/polygon_3"
				android:src="@drawable/polygon_3"
				android:contentDescription="polygon_3"
				 android:layout_marginStart="155dp"
				android:layout_marginTop="600dp"
				android:layout_width="28.8dp"
				android:layout_height="28.59dp" />


			<RelativeLayout android:id="@+id/group_5293"
				android:layout_marginTop="604.64dp"
				android:layout_marginStart="187.41dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/polygon_4"
					android:src="@drawable/polygon_4"
					android:contentDescription="polygon_4"
					 android:layout_marginStart="-0dp"
					android:layout_marginTop="0dp"
					android:layout_width="20.24dp"
					android:layout_height="20.09dp" />

				<View   android:id="@+id/rectangle_3003"
					android:background="@drawable/rectangle_3003_shape"
					 android:alpha="0.83999997377396"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="2dp"
					android:layout_width="3.86dp"
					android:layout_height="18.54dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_5294"
				android:layout_marginTop="584dp"
				android:layout_marginStart="131dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/polygon_4_ek1"
					android:src="@drawable/polygon_4_ek1"
					android:contentDescription="polygon_4_ek1"
					 android:layout_marginStart="-16dp"
					android:layout_marginTop="21dp"
					android:layout_width="20.24dp"
					android:layout_height="20.09dp" />

				<View   android:id="@+id/rectangle_3003_ek1"
					android:background="@drawable/rectangle_3003_ek1_shape"
					 android:alpha="0.83999997377396"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="4dp"
					android:layout_width="3.86dp"
					android:layout_height="18.54dp" />

			</RelativeLayout>

			<View   android:id="@+id/rectangle_3004"
				android:background="@drawable/rectangle_3004_shape"
				 android:alpha="0.52999997138977"
				 android:layout_marginStart="237dp"
				android:layout_marginTop="610dp"
				android:layout_width="558dp"
				android:layout_height="10dp" />

			<View   android:id="@+id/rectangle_3005"
				android:background="@drawable/rectangle_3005_shape"
				 android:alpha="0.83999997377396"
				 android:layout_marginStart="237dp"
				android:layout_marginTop="610dp"
				android:layout_width="190dp"
				android:layout_height="10dp" />


			<RelativeLayout android:id="@+id/akar_icons_sound_on"
				android:layout_marginTop="600dp"
				android:layout_marginStart="827dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/vector_ek3"
					android:src="@drawable/vector_ek3"
					android:contentDescription="vector_ek3"
					 android:layout_marginStart="2.32dp"
					android:layout_marginTop="4.64dp"
					android:layout_width="23.66dp"
					android:layout_height="19.57dp" />

			</RelativeLayout>

			<ImageView android:id="@+id/unsplash_okkpu8r_shq"
				android:src="@drawable/unsplash_okkpu8r_shq"
				android:contentDescription="unsplash_okkpu8r_shq"
				 android:layout_marginStart="939dp"
				android:layout_marginTop="448dp"
				android:layout_width="269dp"
				android:layout_height="172dp" />

			<ImageView android:id="@+id/polygon_4_ek2"
				android:src="@drawable/polygon_4_ek2"
				android:contentDescription="polygon_4_ek2"
				 android:layout_marginStart="1044dp"
				android:layout_marginTop="510dp"
				android:layout_width="38.8dp"
				android:layout_height="38.51dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>